--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "dev": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
     "test": "mocha -r ts-node/register src/**/*.spec.ts"
   },
-  "author": "",
-  "license": "ISC",
+  "author": {
+    "name": "Dickson Chui (@vicksonzero)",
+    "email": "dicksonZero@gmail.com"
+  },
+  "license": "BSD-3-Clause",
   "dependencies": {
     "@types/express": "^4.17.2",
     "@types/socket.io": "^2.1.4",
@@ -20,5 +23,15 @@
     "express": "^4.17.1",
     "nodemon": "^2.0.2",
     "socket.io": "^2.3.0"
+  },
+  "devDependencies": {
+    "@types/debug": "^4.1.5",
+    "debug": "^4.1.1",
+    "json-loader": "^0.5.7",
+    "phaser": "^3.21.0",
+    "ts-loader": "^6.2.1",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
+    "yaml-loader": "^0.5.0"
   }
 }
