--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,16 +6,16 @@
         "noImplicitAny": true,
         "moduleResolution": "node",
         "sourceMap": true,
-        "outDir": "dist",
+        "outDir": "server-dist",
         "baseUrl": ".",
         "paths": {
             "*": [
                 "node_modules/",
-                "src/types/*"
+                "server-src/types/*"
             ]
         }
     },
     "include": [
-        "src/**/*"
+        "server-src/**/*"
     ]
 }
