--- a/model/basicBoard.yml
+++ b/model/basicBoard.yml
@@ -37,7 +37,7 @@ cells:
   - type: stretchEntranceCell
     id: 6
     nextID: 7
-    nextStretchID: 14
+    nextStretchID: 0
     x: 60
     y: -60
   - type: cell
@@ -70,45 +70,116 @@ cells:
     nextID: next
     x: 120
     y: 0
+stretchCells:
   - type: stretchCell
-    id: 13
-    nextID: 14
-    prevID: 7
+    id: 0
+    nextID: 1
+    prevID: prev
     isGoal: false
     x: 60
     y: -40
   - type: stretchCell
-    id: 14
-    nextID: 15
-    prevID: 13
+    id: 1
+    nextID: 2
+    prevID: 0
     isGoal: false
     x: 60
     y: -20
   - type: stretchCell
-    id: 15
-    nextID: 16
-    prevID: 14
+    id: 2
+    nextID: 3
+    prevID: 1
     isGoal: false
     x: 60
     y: 0
   - type: stretchCell
-    id: 16
-    nextID: 17
-    prevID: 15
+    id: 3
+    nextID: 4
+    prevID: 2
     isGoal: false
     x: 60
     y: 20
   - type: stretchCell
-    id: 17
-    nextID: 18
-    prevID: 16
+    id: 4
+    nextID: 5
+    prevID: 3
     isGoal: false
     x: 60
     y: 40
   - type: stretchCell
-    id: 18
+    id: 5
     isGoal: true
-    nextID: null
-    prevID: 17
+    nextID: 6
+    prevID: 4
     x: 60
     y: 60
+  - type: stretchCell
+    id: 6
+    isGoal: true
+    nextID: 7
+    prevID: 5
+    x: 60
+    y: 80
+  - type: stretchCell
+    id: 7
+    isGoal: true
+    nextID: 8
+    prevID: 6
+    x: 60
+    y: 100
+  - type: stretchCell
+    id: 8
+    isGoal: true
+    nextID: 9
+    prevID: 7
+    x: 60
+    y: 120
+  - type: stretchCell
+    id: 9
+    isGoal: true
+    nextID: 10
+    prevID: 8
+    x: 60
+    y: 140
+  - type: stretchCell
+    id: 10
+    isGoal: true
+    nextID: 11
+    prevID: 9
+    x: 60
+    y: 160
+  - type: stretchCell
+    id: 11
+    isGoal: true
+    nextID: 12
+    prevID: 10
+    x: 60
+    y: 180
+  - type: stretchCell
+    id: 12
+    isGoal: true
+    nextID: 13
+    prevID: 11
+    x: 60
+    y: 200
+  - type: stretchCell
+    id: 13
+    isGoal: true
+    nextID: 14
+    prevID: 12
+    x: 60
+    y: 220
+  - type: stretchCell
+    id: 14
+    isGoal: true
+    nextID: 15
+    prevID: 13
+    x: 60
+    y: 240
+  - type: stretchCell
+    id: 15
+    isGoal: true
+    nextID: 16
+    prevID: 14
+    x: 60
+    y: 260
