--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ludo-plus",
+  "name": "tank-beyond-repair",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -17,15 +17,7 @@
     "email": "dicksonZero@gmail.com"
   },
   "license": "BSD-3-Clause",
-  "dependencies": {
-    "@types/express": "^4.17.2",
-    "@types/socket.io": "^2.1.4",
-    "concurrently": "^5.0.2",
-    "express": "^4.17.1",
-    "nodemon": "^2.0.2",
-    "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/debug": "^4.1.5",
     "copy-webpack-plugin": "^5.1.1",
