--- a/package.json
+++ b/package.json
@@ -4,16 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server-dist/server.js",
-    "build": "tsc",
+    "start": "npm run build-client && webpack-dev-server --mode production",
+    "build": "npm run build-client",
     "lint": "eslint client-src --ext .js,.ts,.tsx",
     "webpack": "webpack",
     "watch-webpack": "webpack-dev-server --progress --color --mode development --config webpack.config.js",
-    "build-client": "webpack --mode production && webpack-dev-server --mode production",
-    "watch-ts": "tsc -w",
+    "build-client": "webpack --mode production",
     "watch-node": "nodemon server-dist/server.js",
-    "dev": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
-    "test": "mocha -r ts-node/register src/**/*.spec.ts"
+    "dev": "npm run watch-webpack",
+    "test": "npm run lint"
   },
   "author": {
     "name": "Dickson Chui (@vicksonzero)",
