--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "email": "dicksonZero@gmail.com"
   },
   "license": "BSD-3-Clause",
-  "dependencies": {},
+  "dependencies": {
+    "box2d.ts": "^1.0.2"
+  },
   "devDependencies": {
     "@types/debug": "^4.1.5",
     "@typescript-eslint/eslint-plugin": "^2.18.0",
