--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "license": "BSD-3-Clause",
   "dependencies": {
-    "box2d.ts": "^1.0.2"
+    "@flyover/box2d": "^1.0.1"
   },
   "devDependencies": {
     "@types/debug": "^4.1.5",
