--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
         "esModuleInterop": false,
         "target": "es6",
         "noImplicitAny": true,
+        "strictNullChecks": true,
+        "strictPropertyInitialization": true,
         "moduleResolution": "node",
         "sourceMap": true,
         "outDir": "server-dist",
