Add prioritize compatible item stacks switch

--- a/client-src/config/conf.yml
+++ b/client-src/config/conf.yml
@@ -9,6 +9,7 @@ config:
     # allowHandFeedItemsIntoTanks: true
 
     pickUpItemsByContact: false
+    prioritizeCompatibleItemStack: true
 
     allowMultipleItemsInHand: true
     allowMultipleItemTypesInHand: false
