Add explosion pool; add missing item pool item recycling code

--- a/client-src/config/conf.yml
+++ b/client-src/config/conf.yml
@@ -135,9 +135,12 @@ config:
       - stat:
           movementSpeed: 1.5
         graphics:
-    gun: []
-    missile: []
-    rocket: []
+    gun: 
+      - stat: {}
+    missile: 
+      - stat: {}
+    rocket: 
+      - stat: {}
   credits:
     - title: Programming
       names:
